--- a/package.json
+++ b/package.json
@@ -1,31 +1,46 @@
 {
-  "name": "schiphol",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "build": "react-router build",
-    "dev": "react-router dev",
-    "start": "react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc"
-  },
-  "dependencies": {
-    "@react-router/node": "^7.1.3",
-    "@react-router/serve": "^7.1.3",
-    "isbot": "^5.1.17",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-router": "^7.1.3"
-  },
-  "devDependencies": {
-    "@react-router/dev": "^7.1.3",
-    "@tailwindcss/vite": "^4.0.0",
-    "@types/node": "^20",
-    "@types/react": "^19.0.1",
-    "@types/react-dom": "^19.0.1",
-    "react-router-devtools": "^1.1.0",
-    "tailwindcss": "^4.0.0",
-    "typescript": "^5.7.2",
-    "vite": "^5.4.11",
-    "vite-tsconfig-paths": "^5.1.4"
-  }
+    "name": "schiphol",
+    "private": true,
+    "type": "module",
+    "scripts": {
+        "build": "react-router build",
+        "dev": "react-router dev",
+        "start": "react-router-serve ./build/server/index.js",
+        "typecheck": "react-router typegen && tsc",
+        "test-e2e": "NODE_OPTIONS='--no-warnings' playwright test --reporter=list",
+        "test-e2e-ui": "NODE_OPTIONS='--no-warnings' playwright test --ui",
+        "test-unit": "jest"
+    },
+    "dependencies": {
+        "@react-router/node": "^7.1.3",
+        "@react-router/serve": "^7.1.3",
+        "isbot": "^5.1.17",
+        "luxon": "^3.5.0",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
+        "react-loading-skeleton": "^3.5.0",
+        "react-router": "^7.1.3",
+        "react-router-dom": "^7.1.3",
+        "tailwind-merge": "^2.6.0",
+        "use-debounce": "^10.0.4",
+        "zod": "^3.24.1"
+    },
+    "devDependencies": {
+        "@playwright/test": "^1.50.0",
+        "@react-router/dev": "^7.1.3",
+        "@tailwindcss/vite": "^4.0.0",
+        "@types/jest": "^29.5.14",
+        "@types/luxon": "^3.4.2",
+        "@types/node": "^20",
+        "@types/react": "^19.0.1",
+        "@types/react-dom": "^19.0.1",
+        "jest": "^29.7.0",
+        "react-router-devtools": "^1.1.0",
+        "sass-embedded": "^1.83.4",
+        "tailwindcss": "^4.0.0",
+        "ts-jest": "^29.2.5",
+        "typescript": "^5.7.2",
+        "vite": "^5.4.11",
+        "vite-tsconfig-paths": "^5.1.4"
+    }
 }
